[DAy-7] Show label frontend

--- a/extensions/product-label-do-1/blocks/label-embed.liquid
+++ b/extensions/product-label-do-1/blocks/label-embed.liquid
@@ -49,7 +49,7 @@
 })();
 </script>
 
-<script src="https://much-zealand-pd-autumn.trycloudflare.com/label-inject.js" defer></script>
+<script src="{{ 'label-inject.js' | asset_url }}" defer></script>
 
 {% schema %}
 {
@@ -68,6 +68,13 @@
       "type": "paragraph", 
       "content": "📝 Configure your labels in the app admin panel. This extension works with any Shopify theme."
     }
+  ],
+  "templates": [
+    "index",
+    "product",
+    "collection",
+    "search",
+    "page"
   ]
 }
 {% endschema %}
