--- a/extensions/do-label-product/snippets/do-label-inject.liquid
+++ b/extensions/do-label-product/snippets/do-label-inject.liquid
@@ -4,6 +4,6 @@
 {% endcomment %}
 
 {% if template contains 'product' %}
-  <link rel="stylesheet" href="{{ 'label-styles.css' | asset_url }}">
+  {% comment %} <link rel="stylesheet" href="{{ 'label-styles.css' | asset_url }}"> {% endcomment %}
   <script src="{{ 'label-inject.js' | asset_url }}" async></script>
 {% endif %} 
