--- a/extensions/do-label-product/blocks/do-label-injector.liquid
+++ b/extensions/do-label-product/blocks/do-label-injector.liquid
@@ -4,7 +4,9 @@
 {% endcomment %}
 
 {% comment %} {% if template contains 'product' %} {% endcomment %}
-  <script src="{{ 'label-inject.js' | asset_url }}" async></script>
+
+<link rel="stylesheet" href="{{ 'label-styles.css' | asset_url }}"> 
+<script src="{{ 'label-inject.js' | asset_url }}" async></script>
 {% comment %} {% endif %} {% endcomment %}
 
 {% schema %}
