--- a/extensions/do-label-product/snippets/do-label-inject.liquid
+++ b/extensions/do-label-product/snippets/do-label-inject.liquid
@@ -3,7 +3,5 @@
   This snippet injects the label script into product pages
 {% endcomment %}
 
-{% if template contains 'product' %}
-  {% comment %} <link rel="stylesheet" href="{{ 'label-styles.css' | asset_url }}"> {% endcomment %}
+ <link rel="stylesheet" href="{{ 'label-styles.css' | asset_url }}"> 
   <script src="{{ 'label-inject.js' | asset_url }}" async></script>
-{% endif %} 
