--- a/extensions/do-label-product/blocks/do-label-injector.liquid
+++ b/extensions/do-label-product/blocks/do-label-injector.liquid
@@ -6,8 +6,9 @@
 {% comment %} {% if template contains 'product' %} {% endcomment %}
 
 <link rel="stylesheet" href="{{ 'label-styles.css' | asset_url }}"> 
-<script src="{{ 'label-inject.js' | asset_url }}" async></script>
-{% comment %} {% endif %} {% endcomment %}
+{% comment %} <script src="{{ 'label-inject.js' | asset_url }}" defer></script> {% endcomment %}
+<script src="{{ 'product-label.js' | asset_url }}" defer></script>
+<script src="{{ 'collection-label.js' | asset_url }}" defer></script>
 
 {% schema %}
 {
