--- a/extensions/do-label-product/snippets/do-label-inject.liquid
+++ b/extensions/do-label-product/snippets/do-label-inject.liquid
@@ -4,4 +4,6 @@
 {% endcomment %}
 
  <link rel="stylesheet" href="{{ 'label-styles.css' | asset_url }}"> 
-  <script src="{{ 'label-inject.js' | asset_url }}" async></script>
+ {% comment %} <script src="{{ 'label-inject.js' | asset_url }}" defer></script> {% endcomment %}
+ <script src="{{ 'product-label.js' | asset_url }}" defer></script>
+ <script src="{{ 'collection-label.js' | asset_url }}" defer></script>
